--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -5,7 +5,7 @@
 
 <div class="mobile-menu">
   <a href="/create" class="main-button">
-    <span>+</span>
+    <i class="fa fa-plus"></i>
   </a>
 </div>
 
