--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,6 +183,10 @@ input[type="submit"] {
   color: #969696; }
 
 @media (max-width: 768px) {
+  input[name="searchform"].ng-dirty span, input[name="searchform"].ng-dirty i {
+    color: red; }
+  #web-next {
+    display: none; }
   input[type="text"] {
     width: 70vw; } }
 
@@ -306,7 +310,19 @@ input[type="submit"] {
   -webkit-box-shadow: 0px 0px 2px #333;
           box-shadow: 0px 0px 2px #333;
   z-index: 15; }
+  .mobile-menu span, .mobile-menu i {
+    position: fixed;
+    bottom: 24px;
+    left: 50%;
+    -webkit-transform: translatex(-50%);
+        -ms-transform: translatex(-50%);
+            transform: translatex(-50%);
+    font-size: 24px;
+    color: white;
+    z-index: 17; }
   .mobile-menu .main-button-deactive {
+    pointer-events: none;
+    cursor: default;
     position: fixed;
     bottom: 10px;
     left: 50%;
@@ -321,8 +337,10 @@ input[type="submit"] {
     z-index: 16;
     border: 4px solid #f5f5f5;
     -webkit-box-shadow: 0 0 0px 2px #969696;
-            box-shadow: 0 0 0px 2px #969696; }
+            box-shadow: 0 0 0px 2px #969696;
+    color: #969696; }
   .mobile-menu .main-button, .mobile-menu input {
+    pointer-events: auto;
     cursor: pointer;
     position: fixed;
     bottom: 10px;
@@ -338,17 +356,9 @@ input[type="submit"] {
     z-index: 16;
     border: 4px solid #f5f5f5;
     -webkit-box-shadow: 0 0 0px 2px #969696;
-            box-shadow: 0 0 0px 2px #969696; }
-    .mobile-menu .main-button span, .mobile-menu input span {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      -webkit-transform: translatex(-50%);
-          -ms-transform: translatex(-50%);
-              transform: translatex(-50%);
-      font-size: 44px;
-      color: white;
-      font-family: "Raleway", tahoma, sans-serif; }
+            box-shadow: 0 0 0px 2px #969696;
+    color: white;
+    font-size: 24px; }
     .mobile-menu .main-button:hover, .mobile-menu input:hover {
       background-color: #7d9bff;
       border: 4px solid #f5f5f5; }
