--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -75,7 +75,18 @@
   background-color: $lgray;
   box-shadow: 0px 0px 2px $dgray;
   z-index: 15;
+  span, i {
+    position: fixed;
+    bottom: 24px;
+    left: 50%;
+    transform: translatex(-50%);
+    font-size: 24px;
+    color: white;
+    z-index: 17;
+  }
   .main-button-deactive {
+    pointer-events: none;
+    cursor: default;
     position: fixed;
     bottom: 10px;
     left: 50%;
@@ -87,8 +98,10 @@
     z-index: 16;
     border: 4px solid $lgray;
     box-shadow: 0 0 0px 2px $mgray;
+    color: $mgray;
   }
   .main-button, input {
+    pointer-events: auto;
     cursor: pointer;
     position: fixed;
     bottom: 10px;
@@ -101,15 +114,8 @@
     z-index: 16;
     border: 4px solid $lgray;
     box-shadow: 0 0 0px 2px $mgray;
-    span {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translatex(-50%);
-      font-size: 44px;
-      color: white;
-      font-family: $raleway;
-    }
+    color: white;
+    font-size: 24px;
     &:hover {
       background-color: lighten($main, 5);
       border: 4px solid $lgray;
