--- a/public/css/main.css
+++ b/public/css/main.css
@@ -358,7 +358,9 @@ input[type="submit"] {
     -webkit-box-shadow: 0 0 0px 2px #969696;
             box-shadow: 0 0 0px 2px #969696;
     color: white;
-    font-size: 24px; }
+    font-size: 24px;
+    -webkit-transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out; }
     .mobile-menu .main-button:hover, .mobile-menu input:hover {
       background-color: #7d9bff;
       border: 4px solid #f5f5f5; }
