--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -116,6 +116,7 @@
     box-shadow: 0 0 0px 2px $mgray;
     color: white;
     font-size: 24px;
+    transition: background-color 0.3s ease-in-out;
     &:hover {
       background-color: lighten($main, 5);
       border: 4px solid $lgray;
