--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,9 +1,11 @@
 <a href="/create">
   <div class="corner"></div>
-  <div class="corner-plus">+</div>
+  <div class="corner-icon"><i class="fa fa-plus"></i></div>
 </a>
 
 <div class="mobile-menu">
+  <a href="/" class="link-item" id="homebtn"><span class="fa fa-home"></span></a>
+  <a href="/" class="link-item" id="messagesbtn"><span class="fa fa-comments"></span></a>
   <a href="/create" class="main-button">
     <i class="fa fa-plus"></i>
   </a>
