--- a/public/scss/fixes.scss
+++ b/public/scss/fixes.scss
@@ -17,3 +17,11 @@ body {
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+.arrow-wrapper, .preview-wrapper, .gallery-wrapper, .remaining {
+	//Make Element Non-Highlightable
+	-webkit-user-select: none;  /* Chrome all / Safari all */
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none;          /* Likely future */
+}
