--- a/public/scss/fixes.scss
+++ b/public/scss/fixes.scss
@@ -18,7 +18,7 @@ body {
   display: none !important;
 }
 
-.arrow-wrapper, .preview-wrapper, .gallery-wrapper, .remaining {
+.arrow-wrapper, .preview-wrapper, .gallery-wrapper, .remaining, .mobile-menu {
 	//Make Element Non-Highlightable
 	-webkit-user-select: none;  /* Chrome all / Safari all */
 	-moz-user-select: none;     /* Firefox all */
