added infinite scroll plugin for angular

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -11,7 +11,7 @@
   </a>
 </div>
 
-<div class="container">
+<div class="container" infinite-scroll="main.nextPage()">
   <div class="shout-card" ng-repeat="(index, shout) in main.shouts">
     <div class="clearfix" ng-if="index % 2 == 0"></div>
     <img  ng-src="{{shout.imagePath}}" class="shout-card-top" />
