--- a/public/css/main.css
+++ b/public/css/main.css
@@ -130,14 +130,12 @@ body {
   left: 340px;
   margin-top: 15px;
   max-width: 680px; }
-  .gallery-wrapper input[type="radio"] {
-    display: none; }
-    .gallery-wrapper input[type="radio"] + label {
+  .gallery-wrapper input[type="radio"] + label {
+    height: 124px;
+    cursor: pointer; }
+    .gallery-wrapper input[type="radio"] + label img {
       height: 124px;
-      cursor: pointer; }
-      .gallery-wrapper input[type="radio"] + label img {
-        height: 124px;
-        width: auto; }
+      width: auto; }
   .gallery-wrapper .img-wrapper {
     position: relative;
     float: left;
@@ -156,6 +154,14 @@ body {
   display: block;
   margin: 0px auto;
   width: 300px; }
+
+.gallery-item {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  display: block; }
 
 @media screen and (min-width: 568px) and (max-width: 768px) {
   .gallery-wrapper {
