--- a/public/partials/create.html
+++ b/public/partials/create.html
@@ -48,7 +48,7 @@
     <form class="radio-gallery" ng-submit="create.postShout()">
       <div class="img-wrapper" ng-repeat="(index, image) in create.returnedImages"  ng-class="{'selected' : index == create.curr}">
         <input type="radio" name="gallery" value="{{index}}" id="thumb-{{index}}" ng-model="create.curr" ng-click="create.textifyImage()">
-        <label for="thumb-{{index}}"><img ng-src="{{image.thumb}}" class="gallery-item" id="img-{{index}}"></label>
+        <label class="gallery-item" for="thumb-{{index}}" style="background-image: url('{{image.thumb}}');"></label>
         <img ng-src="{{image.full}}" style="display:none">
       </div>
       <div class="clearfix"></div>
