--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -76,7 +76,7 @@
   box-shadow: 0px 0px 2px $dgray;
   z-index: 15;
   .link-item {
-    position: fixed;
+    position: absolute;
     bottom: 7px;
     color: $mgray;
     font-size: 30px;
@@ -93,7 +93,7 @@
     }
   }
   i {
-    position: fixed;
+    position: absolute;
     bottom: 24px;
     left: 50%;
     transform: translatex(-50%);
@@ -109,7 +109,7 @@
   .main-button-deactive {
     pointer-events: none;
     cursor: default;
-    position: fixed;
+    position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
@@ -125,7 +125,7 @@
   .main-button, input {
     pointer-events: auto;
     cursor: pointer;
-    position: fixed;
+    position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
