--- a/public/partials/create.html
+++ b/public/partials/create.html
@@ -29,7 +29,7 @@
 </div>
 
 
-<div class="container">
+<div class="container" style="transform: scale({{create.getRatio()}});">
   <canvas id="preview-canvas" width="640" height="920" style="display: none"></canvas>
   <canvas id="finished-canvas" width="640" height="920" style="display: none"></canvas>
   <div id="dataHolder"></div>
