--- a/public/scss/containers.scss
+++ b/public/scss/containers.scss
@@ -6,6 +6,7 @@
 	position: relative;
 	margin: 0 auto;
 	max-width: 1020px;
+	transform-origin: 50% 0%;
 }
 
 // Tablet and Sideways Phone
@@ -20,6 +21,8 @@
 @media screen and (max-width: 567px) {
 	.container {
 		margin: 0 auto;
-		max-width: 320px;
+		width: 320px;
+    padding: 6px;
+    padding-bottom: 45px;
 	}
 }
