--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -3,6 +3,8 @@
   <div class="corner-icon"><i class="fa fa-plus"></i></div>
 </a>
 
+
+
 <div class="mobile-menu">
   <a href="/" class="link-item" id="homebtn"><span class="fa fa-home"></span></a>
   <a href="/" class="link-item" id="messagesbtn"><span class="fa fa-comments"></span></a>
@@ -18,4 +20,12 @@
     <div class="shout-card-bottom"><p></p></div>
   </div>
   <div class="clearfix"></div>
+</div>
+
+<div class="dot-wrapper" ng-if="main.gettingShouts">
+<div class="dots">
+	<span></span>
+	<span></span>
+	<span></span>
+</div>
 </div>
