--- a/public/scss/loader.scss
+++ b/public/scss/loader.scss
@@ -1,3 +1,55 @@
+// Dot Loader
+.dot-wrapper {
+	position: relative;
+	display: block;
+	height: 15px;
+	width: 100%;
+}
+.dots {
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	display: inline-block;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	span {
+		position: absolute;
+		top: 0;
+		display: block;
+		width: 15px;
+		height: 15px;
+		background: $mgray;
+		border-radius: 50%;
+		transform: scale(0.1);
+		&:nth-child(1) {
+			left: -30px;
+			animation: bounce 1s linear infinite;
+		}
+		&:nth-child(2) {
+			animation: bounce 1s linear .33s infinite;
+		}
+		&:nth-child(3) {
+			left: 30px;
+			animation: bounce 1s linear .67s infinite;
+		}
+	}
+}
+
+@keyframes bounce {
+	0% {
+		transform: scale(0.75);
+
+	}
+	67% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(0.75);
+	}
+}
+
+// Spinning loader
 #loader {
 	position: fixed;
 	top: 0;
